--- a/src/app/styles/variables/colors.scss
+++ b/src/app/styles/variables/colors.scss
@@ -2,6 +2,7 @@
 	--app-background: #111b21;
 	--app-background-stripe: #00a884;
 	--login-window-background: #ffffff;
+	--login-text-color: #41525d;
 	--header-background: #202c33;
 	--menuPanel-border: #8696a039;
 	--chatItem-borderTop: #8696a026;
