--- a/src/features/AuthByIdToken/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByIdToken/ui/LoginForm/LoginForm.module.scss
@@ -5,6 +5,7 @@
 
 .title {
 	margin-bottom: 30px;
+	color: var(--login-text-color);
 }
 
 .input {
@@ -19,6 +20,10 @@
 
 .errorTrue {
 	z-index: var(--z-container);
+}
+
+.instruction {
+	color: var(--login-text-color);
 }
 
 .link {
